# aligned-example-otovo

./: .env  README.md  example.ipynb  feature-store.json  feature_store_location.py  pyproject.toml  source.py
.github/: update-store.yml
cancer_scan/: area.py  breast_scan_raw.py  compactness.py  diagnosis.py  models.py  radius.py  smoothness.py  source.py
data/: cancer_scans.csv
feature_store_definition/: breast_scan_raw.py  breast_scan_transformed.py  models.py  source.py
titanic/: model.py  passenger.py  source.py
