[tool.poetry]
name = "aladdin-example"
version = "0.1.0"
description = "Example of how to use aladdinml"
authors = ["Mats E. Mollestad <mats@mollestad.no>"]

[tool.poetry.dependencies]
python = "^3.10"
aligned = {version="^0.0.1-alpha.0", extras=["redis", "pandera", "server"]}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
